Compiler/generated_c++/MaPLParser.cpp

// Generated from ./MaPLParser.g4 by ANTLR 4.13.1



#include "MaPLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MaPLParserStaticData final {
  MaPLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MaPLParserStaticData(const MaPLParserStaticData&) = delete;
  MaPLParserStaticData(MaPLParserStaticData&&) = delete;
  MaPLParserStaticData& operator=(const MaPLParserStaticData&) = delete;
  MaPLParserStaticData& operator=(MaPLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag maplparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
MaPLParserStaticData *maplparserParserStaticData = nullptr;

void maplparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (maplparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(maplparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MaPLParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "imperativeStatement", "metadataStatement", 
      "assignStatement", "unaryStatement", "expression", "objectExpression", 
      "variableDeclaration", "type", "pointerType", "scope", "whileLoop", 
      "forLoop", "forLoopControlStatements", "doWhileLoop", "conditional", 
      "conditionalElse", "apiGlobal", "apiType", "apiInheritance", "apiFunction", 
      "apiFunctionParams", "apiProperty", "apiSubscript", "apiImport", "identifier", 
      "bitwiseShiftRight"
    },
    std::vector<std::string>{
      "", "'='", "'+'", "'+='", "'-'", "'-='", "'/'", "'/='", "'*'", "'*='", 
      "'%'", "'%='", "'++'", "'--'", "'=='", "'!='", "'&&'", "'||'", "'!'", 
      "'<'", "'<='", "'>'", "'>='", "'~'", "'&'", "'&='", "'|'", "'|='", 
      "'^'", "'^='", "'<<'", "'<<='", "'>>='", "'while'", "'for'", "'do'", 
      "'if'", "'else'", "'break'", "'continue'", "'exit'", "'char'", "'int32'", 
      "'int64'", "'uint32'", "'uint64'", "'float32'", "'float64'", "'bool'", 
      "'string'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", "','", 
      "':'", "'\\u003F'", "'\\u003F\\u003F'", "';'", "'#global'", "'#type'", 
      "'#import'", "'readonly'", "'void'", "'...'", "'NULL'", "'true'", 
      "'false'", "", "", "", "'<\\u003F'", "", "", "", "", "'`'", "'${'", 
      "'\\u003F>'"
    },
    std::vector<std::string>{
      "", "ASSIGN", "ADD", "ADD_ASSIGN", "SUBTRACT", "SUBTRACT_ASSIGN", 
      "DIVIDE", "DIVIDE_ASSIGN", "MULTIPLY", "MULTIPLY_ASSIGN", "MOD", "MOD_ASSIGN", 
      "INCREMENT", "DECREMENT", "LOGICAL_EQUALITY", "LOGICAL_INEQUALITY", 
      "LOGICAL_AND", "LOGICAL_OR", "LOGICAL_NEGATION", "LESS_THAN", "LESS_THAN_EQUAL", 
      "GREATER_THAN", "GREATER_THAN_EQUAL", "BITWISE_NEGATION", "BITWISE_AND", 
      "BITWISE_AND_ASSIGN", "BITWISE_OR", "BITWISE_OR_ASSIGN", "BITWISE_XOR", 
      "BITWISE_XOR_ASSIGN", "BITWISE_SHIFT_LEFT", "BITWISE_SHIFT_LEFT_ASSIGN", 
      "BITWISE_SHIFT_RIGHT_ASSIGN", "LOOP_WHILE", "LOOP_FOR", "LOOP_DO", 
      "CONDITIONAL", "CONDITIONAL_ELSE", "BREAK", "CONTINUE", "EXIT", "DECL_CHAR", 
      "DECL_INT32", "DECL_INT64", "DECL_UINT32", "DECL_UINT64", "DECL_FLOAT32", 
      "DECL_FLOAT64", "DECL_BOOL", "DECL_STRING", "PAREN_OPEN", "PAREN_CLOSE", 
      "SCOPE_OPEN", "SCOPE_CLOSE", "SUBSCRIPT_OPEN", "SUBSCRIPT_CLOSE", 
      "OBJECT_TO_MEMBER", "PARAM_DELIMITER", "COLON", "TERNARY_CONDITIONAL", 
      "NULL_COALESCING", "STATEMENT_DELIMITER", "API_GLOBAL", "API_TYPE", 
      "API_IMPORT", "API_READONLY", "API_VOID", "API_VARIADIC_PARAMETERS", 
      "LITERAL_NULL", "LITERAL_TRUE", "LITERAL_FALSE", "LITERAL_INT", "LITERAL_FLOAT", 
      "LITERAL_STRING", "METADATA_OPEN", "IDENTIFIER", "BLOCK_COMMENT", 
      "LINE_COMMENT", "WHITESPACE", "BITWISE_SHIFT_RIGHT", "METADATA_INTERPOLATION", 
      "METADATA_CLOSE", "METADATA_CHAR"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  maplparserParserStaticData = staticData.release();
}

}

MaPLParser::MaPLParser(TokenStream *input) : MaPLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MaPLParser::MaPLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MaPLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *maplparserParserStaticData->atn, maplparserParserStaticData->decisionToDFA, maplparserParserStaticData->sharedContextCache, options);
}

MaPLParser::~MaPLParser() {
  delete _interpreter;
}

const atn::ATN& MaPLParser::getATN() const {
  return *maplparserParserStaticData->atn;
}

std::string MaPLParser::getGrammarFileName() const {
  return "MaPLParser.g4";
}

const std::vector<std::string>& MaPLParser::getRuleNames() const {
  return maplparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& MaPLParser::getVocabulary() const {
  return maplparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MaPLParser::getSerializedATN() const {
  return maplparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

MaPLParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MaPLParser::ProgramContext::EOF() {
  return getToken(MaPLParser::EOF, 0);
}

std::vector<MaPLParser::StatementContext *> MaPLParser::ProgramContext::statement() {
  return getRuleContexts<MaPLParser::StatementContext>();
}

MaPLParser::StatementContext* MaPLParser::ProgramContext::statement(size_t i) {
  return getRuleContext<MaPLParser::StatementContext>(i);
}


size_t MaPLParser::ProgramContext::getRuleIndex() const {
  return MaPLParser::RuleProgram;
}


MaPLParser::ProgramContext* MaPLParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MaPLParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 33) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 33)) & 6854231588863) != 0)) {
      setState(56);
      statement();
      setState(61);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(62);
    match(MaPLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MaPLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MaPLParser::ImperativeStatementContext* MaPLParser::StatementContext::imperativeStatement() {
  return getRuleContext<MaPLParser::ImperativeStatementContext>(0);
}

tree::TerminalNode* MaPLParser::StatementContext::STATEMENT_DELIMITER() {
  return getToken(MaPLParser::STATEMENT_DELIMITER, 0);
}

MaPLParser::WhileLoopContext* MaPLParser::StatementContext::whileLoop() {
  return getRuleContext<MaPLParser::WhileLoopContext>(0);
}

MaPLParser::ForLoopContext* MaPLParser::StatementContext::forLoop() {
  return getRuleContext<MaPLParser::ForLoopContext>(0);
}

MaPLParser::DoWhileLoopContext* MaPLParser::StatementContext::doWhileLoop() {
  return getRuleContext<MaPLParser::DoWhileLoopContext>(0);
}

MaPLParser::ConditionalContext* MaPLParser::StatementContext::conditional() {
  return getRuleContext<MaPLParser::ConditionalContext>(0);
}

MaPLParser::ApiGlobalContext* MaPLParser::StatementContext::apiGlobal() {
  return getRuleContext<MaPLParser::ApiGlobalContext>(0);
}

MaPLParser::ApiTypeContext* MaPLParser::StatementContext::apiType() {
  return getRuleContext<MaPLParser::ApiTypeContext>(0);
}

MaPLParser::ApiImportContext* MaPLParser::StatementContext::apiImport() {
  return getRuleContext<MaPLParser::ApiImportContext>(0);
}

MaPLParser::MetadataStatementContext* MaPLParser::StatementContext::metadataStatement() {
  return getRuleContext<MaPLParser::MetadataStatementContext>(0);
}

MaPLParser::ScopeContext* MaPLParser::StatementContext::scope() {
  return getRuleContext<MaPLParser::ScopeContext>(0);
}


size_t MaPLParser::StatementContext::getRuleIndex() const {
  return MaPLParser::RuleStatement;
}


MaPLParser::StatementContext* MaPLParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, MaPLParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(64);
      imperativeStatement();
      setState(65);
      match(MaPLParser::STATEMENT_DELIMITER);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(67);
      whileLoop();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(68);
      forLoop();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(69);
      doWhileLoop();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(70);
      conditional();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(71);
      apiGlobal();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(72);
      apiType();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(73);
      apiImport();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(74);
      metadataStatement();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(75);
      scope();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImperativeStatementContext ------------------------------------------------------------------

MaPLParser::ImperativeStatementContext::ImperativeStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MaPLParser::ImperativeStatementContext::BREAK() {
  return getToken(MaPLParser::BREAK, 0);
}

tree::TerminalNode* MaPLParser::ImperativeStatementContext::CONTINUE() {
  return getToken(MaPLParser::CONTINUE, 0);
}

tree::TerminalNode* MaPLParser::ImperativeStatementContext::EXIT() {
  return getToken(MaPLParser::EXIT, 0);
}

MaPLParser::VariableDeclarationContext* MaPLParser::ImperativeStatementContext::variableDeclaration() {
  return getRuleContext<MaPLParser::VariableDeclarationContext>(0);
}

MaPLParser::AssignStatementContext* MaPLParser::ImperativeStatementContext::assignStatement() {
  return getRuleContext<MaPLParser::AssignStatementContext>(0);
}

MaPLParser::UnaryStatementContext* MaPLParser::ImperativeStatementContext::unaryStatement() {
  return getRuleContext<MaPLParser::UnaryStatementContext>(0);
}

MaPLParser::ObjectExpressionContext* MaPLParser::ImperativeStatementContext::objectExpression() {
  return getRuleContext<MaPLParser::ObjectExpressionContext>(0);
}


size_t MaPLParser::ImperativeStatementContext::getRuleIndex() const {
  return MaPLParser::RuleImperativeStatement;
}


MaPLParser::ImperativeStatementContext* MaPLParser::imperativeStatement() {
  ImperativeStatementContext *_localctx = _tracker.createInstance<ImperativeStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, MaPLParser::RuleImperativeStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(78);
      antlrcpp::downCast<ImperativeStatementContext *>(_localctx)->keyToken = match(MaPLParser::BREAK);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(79);
      antlrcpp::downCast<ImperativeStatementContext *>(_localctx)->keyToken = match(MaPLParser::CONTINUE);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(80);
      antlrcpp::downCast<ImperativeStatementContext *>(_localctx)->keyToken = match(MaPLParser::EXIT);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(81);
      variableDeclaration();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(82);
      assignStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(83);
      unaryStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(84);
      objectExpression(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MetadataStatementContext ------------------------------------------------------------------

MaPLParser::MetadataStatementContext::MetadataStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MaPLParser::MetadataStatementContext::METADATA_OPEN() {
  return getToken(MaPLParser::METADATA_OPEN, 0);
}

tree::TerminalNode* MaPLParser::MetadataStatementContext::METADATA_CLOSE() {
  return getToken(MaPLParser::METADATA_CLOSE, 0);
}

std::vector<MaPLParser::ExpressionContext *> MaPLParser::MetadataStatementContext::expression() {
  return getRuleContexts<MaPLParser::ExpressionContext>();
}

MaPLParser::ExpressionContext* MaPLParser::MetadataStatementContext::expression(size_t i) {
  return getRuleContext<MaPLParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> MaPLParser::MetadataStatementContext::METADATA_INTERPOLATION() {
  return getTokens(MaPLParser::METADATA_INTERPOLATION);
}

tree::TerminalNode* MaPLParser::MetadataStatementContext::METADATA_INTERPOLATION(size_t i) {
  return getToken(MaPLParser::METADATA_INTERPOLATION, i);
}

std::vector<tree::TerminalNode *> MaPLParser::MetadataStatementContext::SCOPE_CLOSE() {
  return getTokens(MaPLParser::SCOPE_CLOSE);
}

tree::TerminalNode* MaPLParser::MetadataStatementContext::SCOPE_CLOSE(size_t i) {
  return getToken(MaPLParser::SCOPE_CLOSE, i);
}


size_t MaPLParser::MetadataStatementContext::getRuleIndex() const {
  return MaPLParser::RuleMetadataStatement;
}


MaPLParser::MetadataStatementContext* MaPLParser::metadataStatement() {
  MetadataStatementContext *_localctx = _tracker.createInstance<MetadataStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, MaPLParser::RuleMetadataStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    antlrcpp::downCast<MetadataStatementContext *>(_localctx)->metadata_openToken = match(MaPLParser::METADATA_OPEN);
    antlrcpp::downCast<MetadataStatementContext *>(_localctx)->metadataTokens.push_back(antlrcpp::downCast<MetadataStatementContext *>(_localctx)->metadata_openToken);
    setState(94);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MaPLParser::METADATA_INTERPOLATION) {
      setState(88);
      antlrcpp::downCast<MetadataStatementContext *>(_localctx)->metadata_interpolationToken = match(MaPLParser::METADATA_INTERPOLATION);
      antlrcpp::downCast<MetadataStatementContext *>(_localctx)->metadataTokens.push_back(antlrcpp::downCast<MetadataStatementContext *>(_localctx)->metadata_interpolationToken);
      setState(89);
      expression(0);
      setState(90);
      antlrcpp::downCast<MetadataStatementContext *>(_localctx)->scope_closeToken = match(MaPLParser::SCOPE_CLOSE);
      antlrcpp::downCast<MetadataStatementContext *>(_localctx)->metadataTokens.push_back(antlrcpp::downCast<MetadataStatementContext *>(_localctx)->scope_closeToken);
      setState(96);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(97);
    antlrcpp::downCast<MetadataStatementContext *>(_localctx)->metadata_closeToken = match(MaPLParser::METADATA_CLOSE);
    antlrcpp::downCast<MetadataStatementContext *>(_localctx)->metadataTokens.push_back(antlrcpp::downCast<MetadataStatementContext *>(_localctx)->metadata_closeToken);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignStatementContext ------------------------------------------------------------------

MaPLParser::AssignStatementContext::AssignStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MaPLParser::ObjectExpressionContext* MaPLParser::AssignStatementContext::objectExpression() {
  return getRuleContext<MaPLParser::ObjectExpressionContext>(0);
}

MaPLParser::ExpressionContext* MaPLParser::AssignStatementContext::expression() {
  return getRuleContext<MaPLParser::ExpressionContext>(0);
}

tree::TerminalNode* MaPLParser::AssignStatementContext::ASSIGN() {
  return getToken(MaPLParser::ASSIGN, 0);
}

tree::TerminalNode* MaPLParser::AssignStatementContext::ADD_ASSIGN() {
  return getToken(MaPLParser::ADD_ASSIGN, 0);
}

tree::TerminalNode* MaPLParser::AssignStatementContext::SUBTRACT_ASSIGN() {
  return getToken(MaPLParser::SUBTRACT_ASSIGN, 0);
}

tree::TerminalNode* MaPLParser::AssignStatementContext::MULTIPLY_ASSIGN() {
  return getToken(MaPLParser::MULTIPLY_ASSIGN, 0);
}

tree::TerminalNode* MaPLParser::AssignStatementContext::DIVIDE_ASSIGN() {
  return getToken(MaPLParser::DIVIDE_ASSIGN, 0);
}

tree::TerminalNode* MaPLParser::AssignStatementContext::MOD_ASSIGN() {
  return getToken(MaPLParser::MOD_ASSIGN, 0);
}

tree::TerminalNode* MaPLParser::AssignStatementContext::BITWISE_AND_ASSIGN() {
  return getToken(MaPLParser::BITWISE_AND_ASSIGN, 0);
}

tree::TerminalNode* MaPLParser::AssignStatementContext::BITWISE_OR_ASSIGN() {
  return getToken(MaPLParser::BITWISE_OR_ASSIGN, 0);
}

tree::TerminalNode* MaPLParser::AssignStatementContext::BITWISE_XOR_ASSIGN() {
  return getToken(MaPLParser::BITWISE_XOR_ASSIGN, 0);
}

tree::TerminalNode* MaPLParser::AssignStatementContext::BITWISE_SHIFT_LEFT_ASSIGN() {
  return getToken(MaPLParser::BITWISE_SHIFT_LEFT_ASSIGN, 0);
}

tree::TerminalNode* MaPLParser::AssignStatementContext::BITWISE_SHIFT_RIGHT_ASSIGN() {
  return getToken(MaPLParser::BITWISE_SHIFT_RIGHT_ASSIGN, 0);
}


size_t MaPLParser::AssignStatementContext::getRuleIndex() const {
  return MaPLParser::RuleAssignStatement;
}


MaPLParser::AssignStatementContext* MaPLParser::assignStatement() {
  AssignStatementContext *_localctx = _tracker.createInstance<AssignStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, MaPLParser::RuleAssignStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    objectExpression(0);
    setState(100);
    antlrcpp::downCast<AssignStatementContext *>(_localctx)->keyToken = _input->LT(1);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7147096746) != 0))) {
      antlrcpp::downCast<AssignStatementContext *>(_localctx)->keyToken = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(101);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryStatementContext ------------------------------------------------------------------

MaPLParser::UnaryStatementContext::UnaryStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MaPLParser::ObjectExpressionContext* MaPLParser::UnaryStatementContext::objectExpression() {
  return getRuleContext<MaPLParser::ObjectExpressionContext>(0);
}

tree::TerminalNode* MaPLParser::UnaryStatementContext::INCREMENT() {
  return getToken(MaPLParser::INCREMENT, 0);
}

tree::TerminalNode* MaPLParser::UnaryStatementContext::DECREMENT() {
  return getToken(MaPLParser::DECREMENT, 0);
}


size_t MaPLParser::UnaryStatementContext::getRuleIndex() const {
  return MaPLParser::RuleUnaryStatement;
}


MaPLParser::UnaryStatementContext* MaPLParser::unaryStatement() {
  UnaryStatementContext *_localctx = _tracker.createInstance<UnaryStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, MaPLParser::RuleUnaryStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    objectExpression(0);
    setState(104);
    antlrcpp::downCast<UnaryStatementContext *>(_localctx)->keyToken = _input->LT(1);
    _la = _input->LA(1);
    if (!(_la == MaPLParser::INCREMENT

    || _la == MaPLParser::DECREMENT)) {
      antlrcpp::downCast<UnaryStatementContext *>(_localctx)->keyToken = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

MaPLParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MaPLParser::TypeContext* MaPLParser::ExpressionContext::type() {
  return getRuleContext<MaPLParser::TypeContext>(0);
}

tree::TerminalNode* MaPLParser::ExpressionContext::PAREN_CLOSE() {
  return getToken(MaPLParser::PAREN_CLOSE, 0);
}

std::vector<MaPLParser::ExpressionContext *> MaPLParser::ExpressionContext::expression() {
  return getRuleContexts<MaPLParser::ExpressionContext>();
}

MaPLParser::ExpressionContext* MaPLParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<MaPLParser::ExpressionContext>(i);
}
